Amended references in header to serve child themes correctly. Adjusted attachment capture handling to cater for both: either availability or absence of wrapping <p> tags.

--- a/scss/modules/_header.scss
+++ b/scss/modules/_header.scss
@@ -18,9 +18,15 @@
     width: 100%;
     display: none;
     img {
-        margin: 0;
+        margin: 0 auto;
         padding: 0;
         border: 0;
+        border-radius: 0;
+        -moz-border-radius: 0;
+        -webkit-border-radius: 0;
+        box-shadow: none;
+        -moz-box-shadow: none;
+        -webkit-box-shadow: none;
     }
     @media only screen and (min-width: 28.75em) {
         display: block;
